apps/ansible/ara/03_service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: ara
  name: ara
  namespace: ansible
spec:
  ports:
  - name: http-ara
    port: 8000
    protocol: TCP
    targetPort: http-ara
  selector:
    app.kubernetes.io/name: ara
  sessionAffinity: None
