apps/ansible/ara/05_ingress.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ara
  namespace: ansible
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/auth-url: "https://auth.ankhmorpork.thaum.xyz/oauth2/auth"
    nginx.ingress.kubernetes.io/auth-signin: "https://auth.ankhmorpork.thaum.xyz/oauth2/start?rd=$scheme://$host$escaped_request_uri"
spec:
  tls:
  - hosts:
    - ara.ankhmorpork.thaum.xyz
    secretName: ara-tls
  rules:
  - host: ara.ankhmorpork.thaum.xyz
    http:
      paths:
      - backend:
          serviceName: ara
          servicePort: 8000
